# AI_Generated_Projects

./: .gitignore  .gitmodules  README.md
11translator/: pubspec.yaml  test_db.dart  test_llama_cpp.dart
11translator/android/app/: build.gradle.kts
11translator/docs/: 03_feature_architecture.md  04_cross_platform_design.md  06_local_llm_guide.md  08_translator_app_redesign.md
11translator/lib/: app.dart  main.dart
11translator/python_backend/: llm_server.py
11translator/test/: widget_test.dart
11translator/windows/flutter/: generated_plugins.cmake
1Snake_Game/: worklog.md
1Snake_Game/src/lib/: wordSystem.ts
1贪吃蛇Snake_Game/docs/: ai-snake-game-prompt.md
1贪吃蛇Snake_Game/src/app/: page.tsx
2单页面应用SPA/: .gitignore  AGENT_PROMPT.md  ANSWER_SUMMARY.md  API_QUICK_REFERENCE.md  COMMUNICATION_GUIDE.md  COMMUNICATION_SUMMARY.md  DATA_FLOW_VISUALIZATION.md  DELIVERY_CHECKLIST.md  INDEX.md  README.md  WORK_SESSION_LOG.md  index.html  package-lock.json  package.json
2单页面应用SPA/examples/: generate-sample-excel.js
2单页面应用SPA/server/: index.js
2单页面应用SPA/src/: main.tsx  styles.css  types.d.ts
2单页面应用SPA/src/components/: ProductForm.tsx  ResultCard.tsx  TemplateManager.tsx
2单页面应用SPA/src/pages/: App.tsx  ImportPage.tsx
3文档AGENT/: GUEST_MODE.md  SETUP.md  package.json
3文档AGENT/prisma/: schema.prisma
3文档AGENT/src/app/: page.tsx
4chat/: .env.example  .gitignore  IM_microservice_design.md  README.md  chat_app.db  docker-compose.cloud.yml  docker-compose.ha.yml  docker-compose.multi-region.yml  docker-compose.yml  forward-ports.sh  init.sql  提示词prompts.txt
4chat/.claude/: settings.json
4chat/chat_app/: .env.example  Readme.md  arch.md  chat_app.db  check_routes.py  database.py  generate_default_avatars.py  main.py  prd.md  project_state.md  query_users.py  requirements.txt  test_summary.md
4chat/chat_app/frontend/: package.json
4chat/chat_app/models/: contact.py  message.py  refresh_token.py  room.py  user.py
4chat/chat_app/tests/: test_auth.py  (+1 more)
4chat/chat_hist/: hist10.md  hist11.md  hist6.md  hist7.md  hist8.md  hist9.md
4chat/docs/: registration-verification-optimization.md
4chat/frontend/: Dockerfile  nginx.conf
4chat/gateway/: apisix.yaml  config.yaml
4chat/k8s/: deploy-multi-cluster.sh  deploy.sh  forward-ports.sh  helm-deploy.sh
4聊天chat/: chat_zai.tar  提示词prompts.txt
4聊天chat/chat_app/: Readme.md  arch.md  chat_app.db  generate_default_avatars.py  main.py
4聊天chat/chat_claude/: 提示词prompts.txt
4聊天chat/chat_hist/: hist2.md  hist3.md  hist4.md  hist5.md
4聊天chat/chat_trae/: 提示词prompts.txt
4聊天chat/codebuddy/: .gitignore  Dockerfile  README.md  arch.md  chat_app.db  database.py  final_test_report.md  main.py  requirements.txt  test_api.py  test_complete.py  test_import.py  test_login.py  test_summary.md
4聊天chat/doubao/: generated.md
4聊天chat/lingma/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  arch.md  database.py  docker-compose.yml  main.py  requirements.txt  startup.py  test_summary.md
4聊天chat/qwen/: generated.py
5video/: bm.drawio  script.md  skills-lock.json  storyboard.md  storyboard1.md  storyboard2.md
5video/chat_hist/: hist1.md
5视频video/: generator.ipynb  选型.csv
5视频video/characters/: 克莱尔.md  罗伯特.md  艾略特·金.md
6player/: pubspec.yaml  提示词prompts.txt
6player/.claude/: settings.local.json
6player/docs/: architecture.md  data-models.md  implementation-phases.md  ui-design.md
6player/rfplayer/: pubspec.yaml  video_info_additions.txt
6player/test/: widget_test.dart
7vec_db/vector_db/: ARCH.md  PRD.md  test_model_config.py  test_new_auth.py  test_url_config.py  test_user_auth.py
7vec_db/vector_db/core/db_lib/cpp/: CMakeLists.txt
7vec_db/vector_db/core/db_lib/cpp/algorithms/flat/: bindings.cpp  flat.cpp  flat.h
7vec_db/vector_db/core/db_lib/cpp/algorithms/flat_ip/: bindings.cpp  flat_ip.cpp  flat_ip.h
7vec_db/vector_db/core/db_lib/cpp/algorithms/ivf/: bindings.cpp  ivf.cpp  ivf.h
7vec_db/vector_db/core/db_lib/cpp/algorithms/lsh/: bindings.cpp  lsh.cpp  lsh.h
7vec_db/vector_db/core/db_lib/cpp/core/: vectordb_core.h
7vec_db/vector_db/core/db_lib/db_lib_rust/: .gitignore  Cargo.toml  build.sh  example.py
7vec_db/vector_db/core/db_lib/db_lib_rust/src/: lib.rs
7vec_db/vector_db/core/db_lib/rust/flat/: Cargo.toml
7vec_db/vector_db/core/db_lib/rust/flat/src/: lib.rs
7vec_db/vector_db/core/db_lib/rust/flat_ip/: Cargo.toml
7vec_db/vector_db/core/db_lib/rust/flat_ip/src/: lib.rs
7向量数据库vec_db/: 提示词prompts.txt
7向量数据库vec_db/vector_db/: requirements.txt
8mcp_server/: requirements.txt
translator_app/: README.md  pubspec.yaml
translator_app/web/: index.html
(+588 files in other folders)
