[package]
name = "flat-ip"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"] }
vectordb_core = { path = "../core", package = "core", features = ["simd"] }
rayon = "1.10"
num_cpus = "1.16"
ndarray = "0.16"

[lib]
name = "flat_ip"
crate-type = ["cdylib"]
